k8s/development/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: development
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 4000

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: development
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      namespace: development
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: margaret_api
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
