k8s/development/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: development
spec:
  ports:
  - port: 5432
  selector:
    app: db

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: db
  namespace: development
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: development
      labels:
        app: db
    spec:
      containers:
      - image: postgres:10.3
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: db-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
