k8s/development/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: development
spec:
  ports:
  - port: 5432
  selector:
    app: postgres

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: postgres
  namespace: development
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: development
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:10.3
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
