k8s/development/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: development
spec:
  ports:
  - port: 6379
  selector:
    app: redis

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redis
  namespace: development
spec:
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: development
      labels:
        app: redis
    spec:
      containers:
      - image: redis:4.0.8
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /data
      volumes:
        - name: redis-persistent-storage
          persistentVolumeClaim:
            claimName: redis-pv-claim
