k8s/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: margaret
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: api.dev.margaret.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
  - host: dev.margaret.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: development
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: nginx

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx
  namespace: development
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15
          args:
            - /nginx-ingress-controller
            - "--default-backend-service=$(POD_NAMESPACE)/default-http-backend"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
